--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Rafael Lima</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Welcome</h1>
-				<p>This is my personal website </p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:rafael.goncalves.lima@gmail.com">email</a></li>
-        		<li><a href="https://github.com/rafael-glima">github.com/rafael-glima</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Rafael Lima
+---
+<div class="blurb">
+	<h1>Welcome</h1>
+	<p>This is my personal website</p>
+</div><!-- /.blurb -->
