--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Rafael Lima
 ---
 <div class="blurb">
-	<h1>Welcome</h1>
-	<p>This is my personal website.</p>
+	<h1>Curriculum Vitae</h1>
+	<p>This is my CV.</p>
 </div><!-- /.blurb -->
