Changes in CV and About sections

--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Rafael Lima
 ---
 <div class="blurb">
-	<h1>Welcome</h1>
-	<p>This is my personal website.</p>
+	<h1>About</h1>
+	<p>This is my personal website. I am a R&D Specialist at Samsung Electronics.</p>
+	<p>In this site, I will share information mostly related to my research interests.</p>
 </div><!-- /.blurb -->
