--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: default
 title: Rafael Lima
 ---
 <div class="blurb">
-	<h1>Welcome</h1>
-	<p>This is my personal website</p>
+	<h1>Rafael Lima</h1>
+	<p>Welcome to my personal website</p>
+	<p>I have a Bachelor of Electrical Engineering, focused in Control Systems,</p>
+	<p> from Federal University of Bahia, and a MSc in Computer Science and Engineering from </p>
+	<p>Ulsan National Institute of Science and Technology.</p>
+	<p>Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil</p>
+	<p>My research interests involve Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
 </div><!-- /.blurb -->
