--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>Rafael Lima</h1>
-	<p>Welcome to my personal website</p>
-	<p>I have a Bachelor of Electrical Engineering, focused in Control Systems,</p>
-	<p> from Federal University of Bahia, and a MSc in Computer Science and Engineering from </p>
-	<p>Ulsan National Institute of Science and Technology.</p>
-	<p>Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil</p>
-	<p>My research interests involve Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
+	<p style="font-size:18px;">Welcome to my personal website</p>
+	<p style="font-size:18px;">I have a Bachelor of Electrical Engineering, focused in Control Systems,</p>
+	<p style="font-size:18px;"> from Federal University of Bahia, and a MSc in Computer Science and Engineering from </p>
+	<p style="font-size:18px;">Ulsan National Institute of Science and Technology.</p>
+	<p style="font-size:18px;">Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil</p>
+	<p style="font-size:18px;">My research interests involve Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
 </div><!-- /.blurb -->
