Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>Rafael Lima</h1>
-	<p style="font-size:18px;">Welcome to my personal website</p>
+	<p style="font-size:18px;">Short Bio</p>
 	<p style="font-size:18px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
