--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>Rafael Lima</h1>
+	<figure>
+  	<img src="Profile.jpg" alt="Trulli" style="width:100%">
+  	<figcaption>Basel, Switzerland (2018).</figcaption>
+	</figure>
 	<p style="font-weight: bold;">BIO</p>
 	<p style="font-size:18px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
