Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Rafael Lima
 <div class="blurb">
 	<h1>Rafael Lima</h1>
 	<figure>
-  	<img src="Profile.jpg" alt="Trulli" style="width:40%">
+  	<img src="Profile.jpg" alt="Trulli" style="width:40%" class="center">
   	<figcaption>Basel, Switzerland (2018).</figcaption>
 	</figure>
 	<p style="font-weight: bold;">BIO</p>
