Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Rafael Lima
 	<h1>Rafael Lima</h1>
 	<figure>
   	<img src="Profile.jpg" alt="Trulli" style="width:40%" class="center">
-  	<figcaption>Basel, Switzerland (2018).</figcaption>
+  	<figcaption class="center">Basel, Switzerland (2018).</figcaption>
 	</figure>
 	<p style="font-weight: bold;">BIO</p>
 	<p style="font-size:18px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
