Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Rafael Lima
 ---
 <div class="blurb">
-	<h1 class=center">Rafael Lima</h1>
+	<h1 class="center">Rafael Lima</h1>
 	<figure>
   	<img src="Profile.jpg" alt="Trulli" style="width:50%" class="center">
   	<figcaption class="center">Basel, Switzerland (2018).</figcaption>
