Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<div class="split left">
-	<h1 class="center">Rafael Lima</h1>
+	<h1>Rafael Lima</h1>
 	<figure>
   	<img src="Profile.jpg" alt="Trulli" style="width:50%" class="center">
   	<figcaption class="center">Basel, Switzerland (2018).</figcaption>
