Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title: Rafael Lima
   	<figcaption class="center">Basel, Switzerland (2018).</figcaption>
 	</figure>
 	</div>
-	<div class="split right">
-	<p style="font-weight: bold;">SHORT BIO</p>
-	<p style="font-size:18px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
+	<div class="split right;parent;">
+	<p style="font-weight: bold;" class="child">SHORT BIO</p>
+	<p style="font-size:18px;" class="child">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
 		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
