--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Rafael Lima
 	</figure>
 	</div>
 	<div class="split right;parent;">
-	<p style="font-weight: bold;">SHORT BIO</p>
-	<p style="font-size:18px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
+	<p style="font-weight: bold; padding-top: 20px;">SHORT BIO</p>
+	<p style="font-size:18px; padding-top: 20px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
 		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
