Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Rafael Lima
   	<figcaption class="center">Basel, Switzerland (2018).</figcaption>
 	</figure>
 	</div>
-	<div class="split right;parent;">
+	<div class="split right;">
 	<p style="font-weight: bold; padding-top: 20px;">SHORT BIO</p>
 	<p style="font-size:18px; padding-top: 20px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
