--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@ layout: default
 title: Rafael Lima
 ---
 <div class="blurb">
-	<div class="split left">
 	<h1>Rafael Lima</h1>
-	<figure>
+	<figure style="float: right;">
   	<img src="Profile.jpg" alt="Trulli" style="width:70%" class="center">
   	<figcaption class="center">Basel, Switzerland (2018).</figcaption>
 	</figure>
-	</div>
-	<div class="split right;">
 	<p style="font-weight: bold; padding-top: 20px;" class = "center">SHORT BIO</p>
 	<p style="font-size:18px; padding-top: 20px;" class="center">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
 		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
 		My research interests involve Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
-	</div>
 </div><!-- /.blurb -->
