Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Rafael Lima
 <div class="blurb">
 	<h1>Rafael Lima</h1>
 	<figure style="float: right;">
-  	<img src="Profile.jpg" alt="Trulli" style="width:40%" class="center">
-  	<figcaption class="center">Basel, Switzerland (2018).</figcaption>
+  	<img src="Profile.jpg" alt="Trulli" style="width:40%">
+  	<figcaption >Basel, Switzerland (2018).</figcaption>
 	</figure>
 	<p style="font-weight: bold; padding-top: 20px;float: left;" class = "center">SHORT BIO</p>
 	<p style="font-size:18px; padding-top: 20px; float: left;" class="center">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
