--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>Rafael Lima</h1>
-	<figure style="float: right;">
+	<figure style="float: left;">
   	<img src="Profile.jpg" alt="Trulli" style="width:40%">
   	<figcaption >Basel, Switzerland (2018).</figcaption>
 	</figure>
-	<p style="font-weight: bold; padding-top: 20px;float: left;">SHORT BIO</p>
-	<p style="font-size:18px; padding-top: 20px; float: left;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
+	<p style="font-weight: bold; padding-top: 20px;float: right;">SHORT BIO</p>
+	<p style="font-size:18px; padding-top: 20px; float: right;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
 		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
