--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>Rafael Lima</h1>
-	<figure style="float: left;">
+	<div style="float: left;">
+	<figure>
   	<img src="Profile.jpg" alt="Trulli" style="width:40%">
   	<figcaption >Basel, Switzerland (2018).</figcaption>
-		<p style="font-weight: bold; padding-top: 20px;float: left; width: 50%;">SHORT BIO</p>
-	<p style="font-size:18px; padding-top: 20px; float: left; width: 50%;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
+	</figure>
+	</div>
+	<div style="float: right; width: 50%;">
+	<p style="font-weight: bold; padding-top: 20px;">SHORT BIO</p>
+	<p style="font-size:18px; padding-top: 20px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
 		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
 		My research interests involve Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
-	</figure>
-
+	</div>
 </div><!-- /.blurb -->
