Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>Rafael Lima</h1>
-	<div style="float: left;">
+	<div style="float: left; width: 49%">
 	<figure>
-  	<img src="Profile.jpg" alt="Trulli" style="width:40%">
+  	<img src="Profile.jpg" alt="Trulli" style="width:80%">
   	<figcaption >Basel, Switzerland (2018).</figcaption>
 	</figure>
 	</div>
