Changes in Main Page content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Rafael Lima
 	</div>
 	<div style="float: right; width: 50%;">
 	<p style="font-weight: bold; padding-top: 20px;">SHORT BIO</p>
-	<p style="font-size:17px; padding-top: 10px;">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
+	<p style="font-size:17px; padding-top: 10px;" align="justify">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
 		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
