Changes in Main Page content

--- a/cv/index.html
+++ b/cv/index.html
@@ -4,5 +4,5 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>Curriculum Vitae</h1>
-	<p style="font-size:16px;">You can find a pdf version of my CV <a href="[ENG]Academic_CV.pdf">here</a></p>
+	<p style="font-size:16px;">You can find a pdf version of my CV <a href="[ENG]Academic_CV.pdf">here</a>.</p>
 </div><!-- /.blurb -->
