--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ title: Rafael Lima
 		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST).
 		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
-		My research interests involve Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
+		My research interests revolve around Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
 	</div>
 </div><!-- /.blurb -->
