--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@ title: Rafael Lima
 ---
 <div class="blurb">
 	<h1>About</h1>
-	<p style="font-size:16px;">This is my personal website. I am a R&D Specialist at Samsung Electronics.</p>
+	<p style="font-size:16px;">This is my personal website. I am a Senior R&D Specialist at Samsung Electronics.</p>
 	<p style="font-size:16px;">In this site, I will share information mostly related to my research interests.</p>
 	<p style="font-size:16px;">The opinions expressed in this website are solely mine, and do not reflect those of my employer.</p>
 </div><!-- /.blurb -->
