--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: Rafael Lima
 	<div style="float: right; width: 50%;">
 	<p style="font-weight: bold; padding-top: 20px;">SHORT BIO</p>
 	<p style="font-size:16px; padding-top: 10px;" align="justify">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
-		from Federal University of Bahia (UFBA), and a MSc in Computer Science and Engineering from
-		Ulsan National Institute of Science and Technology (UNIST).
-		Currently, I work as a R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
-		My research interests revolve around Control Theory, Signal Processing, Statistical Learning and Point Processes.</p>
+		from Federal University of Bahia (UFBA), a MSc in Computer Science and Engineering from
+		Ulsan National Institute of Science and Technology (UNIST) and a Master degree in Electrical Biomedical Engineering from University of Campinas (Unicamp).
+		Currently, I work as a Senior R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
+		My research interests revolve around Statistical Learning, Hawkes Processes and Biomedical Engineering.</p>
 	</div>
 </div><!-- /.blurb -->
