--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ title: Rafael Lima
 		from Federal University of Bahia (UFBA), a M.Sc. in Computer Science and Engineering from
 		Ulsan National Institute of Science and Technology (UNIST) and a Master Degree in Electrical/Biomedical Engineering from University of Campinas (Unicamp).
 		Currently, I work as a Senior R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
-		My research interests revolve around Statistical Learning, Hawkes Processes and Biomedical Engineering.</p>
+		My research interests revolve around Statistical Learning, Hawkes Processes and Machine Learning for Healthcare (ML4H).</p>
 	</div>
 </div><!-- /.blurb -->
