--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@ title: Rafael Lima
 	<p style="font-weight: bold; padding-top: 20px;">SHORT BIO</p>
 	<p style="font-size:16px; padding-top: 10px;" align="justify">I hold a Bachelor of Electrical Engineering, focused in Control Systems,
 		from Federal University of Bahia (UFBA), a M.Sc. in Computer Science and Engineering from
-		Ulsan National Institute of Science and Technology (UNIST) and a Master Degree in Electrical/Biomedical Engineering from University of Campinas (Unicamp).
-		Currently, I work as a Senior R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil.
-		My research interests revolve around Statistical Learning, Hawkes Processes and Machine Learning for Healthcare (ML4H).</p>
+		Ulsan National Institute of Science and Technology (UNIST) and a Master Degree in Electrical/Biomedical Engineering from University of Campinas (Unicamp). Previously, I was a Visiting Fellow at the Max Planck Institute for Software Systems, at Kaiserlautern-DEU. Currently, I work as a Senior R&D Specialist at Samsung Electronics, in Campinas-SP, Brazil. My research interests revolve around Statistical Learning, Hawkes Processes and Machine Learning for Healthcare (ML4H).</p>
 	</div>
 </div><!-- /.blurb -->
